Styles/Index.css
 .u-section-1 {
   /* margin-top: 96px; */
  /* background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url("../images/home_bg_top.jpg"); */
  background-position: 50% 50%;
}

.u-section-1 .u-sheet-1 {
  min-height: 746px;
}

.u-section-1 .u-layout-wrap-1 {
  margin: 60px auto 60px 0;
}

.u-section-1 .u-layout-cell-1 {
  min-height: 428px;
}

.u-section-1 .u-container-layout-1 {
  padding: 30px 120px 30px 30px;
}

.u-section-1 .u-text-1 {
  letter-spacing: 4px;
  font-weight: 300;
  margin-top: 50px;
  margin-left: 5px;
}

.u-section-1 .u-text-2 {
  text-transform: uppercase;
  font-size: 4.5rem;
  font-family: "Bai Jamjuree";
  margin: 20px 0 0;
}

.u-section-1 .u-layout-cell-2 {
  min-height: 198px;
}

.u-section-1 .u-container-layout-2 {
  padding: 0;
}

.u-section-1 .u-layout-cell-3 {
  min-height: 626px;
}

.u-section-1 .u-container-layout-3 {
  padding: 30px;
}

.u-section-1 .u-text-3 {
  font-size: 1.25rem;
  line-height: 1.7;
  font-weight: 300;
  margin: 0;
  padding-top: 50px;
}

.u-section-1 .u-btn-1 {
  background-image: none;
  text-transform: uppercase;
  font-size: 1.125rem;
  letter-spacing: 2px;
  border-style: none;
  margin: 35px auto 0 0;
  padding: 14px 32px 15px;
}

@media (max-width: 1199px) {
  .u-section-1 .u-sheet-1 {
    min-height: 479px;
  }

  .u-section-1 .u-layout-wrap-1 {
    margin-right: initial;
    margin-left: initial;
  }

  .u-section-1 .u-layout-cell-1 {
    min-height: 353px;
  }

  .u-section-1 .u-container-layout-1 {
    padding-right: 40px;
  }

  .u-section-1 .u-layout-cell-2 {
    min-height: 163px;
  }

  .u-section-1 .u-layout-cell-3 {
    min-height: 516px;
  }
}

@media (max-width: 991px) {
  .u-section-1 .u-sheet-1 {
    min-height: 248px;
  }

  .u-section-1 .u-layout-cell-1 {
    min-height: 100px;
  }

  .u-section-1 .u-container-layout-1 {
    padding-right: 30px;
  }

  .u-section-1 .u-text-2 {
    font-size: 3.4375rem;
  }

  .u-section-1 .u-layout-cell-2 {
    min-height: 129px;
  }

  .u-section-1 .u-layout-cell-3 {
    min-height: 100px;
  }

  .u-section-1 .u-text-3 {
    font-size: 1.125rem;
  }
}

@media (max-width: 767px) {
  .u-section-1 .u-sheet-1 {
    min-height: 348px;
  }

  .u-section-1 .u-container-layout-1 {
    padding-right: 10px;
    padding-left: 10px;
  }

  .u-section-1 .u-text-2 {
    font-size: 4.5rem;
  }

  .u-section-1 .u-layout-cell-2 {
    min-height: 166px;
  }

  .u-section-1 .u-container-layout-3 {
    padding-left: 10px;
    padding-right: 10px;
  }
}

@media (max-width: 575px) {
  .u-section-1 .u-sheet-1 {
    min-height: 407px;
  }

  .u-section-1 .u-text-2 {
    font-size: 3rem;
  }

  .u-section-1 .u-layout-cell-2 {
    min-height: 105px;
  }
} .u-section-2 {
  padding-top: 25px;
  background-image: none;
}

.u-section-2 .u-sheet-1 {
  min-height: 804px;
}

.u-section-2 .u-text-1 {
  font-weight: 400;
  margin: 65px auto 0;
}

.u-section-2 .u-text-2 {
  width: 651px;
  line-height: 32px;
  margin: 30px auto 0;
}

.u-section-2 .u-image-1 {
  width: 570px;
  height: 352px;
  margin: 36px auto 60px;
}

@media (max-width: 767px) {
  .u-section-2 .u-sheet-1 {
    min-height: 785px;
  }

  .u-section-2 .u-text-2 {
    width: 540px;
  }

  .u-section-2 .u-image-1 {
    width: 540px;
    height: 333px;
  }
}

@media (max-width: 575px) {
  .u-section-2 .u-sheet-1 {
    min-height: 662px;
  }

  .u-section-2 .u-text-2 {
    width: 340px;
  }

  .u-section-2 .u-image-1 {
    width: 340px;
    height: 210px;
  }
} .u-section-3 {
  background-image: none;
}

.u-section-3 .u-sheet-1 {
  min-height: 923px;
}

.u-section-3 .u-text-1 {
  font-weight: 400;
  margin: 70px auto 0;
}

.u-section-3 .u-text-2 {
  margin: 20px 235px 0;
}

.u-section-3 .u-image-1 {
  width: 549px;
  height: 526px;
  object-position: 43.75% 50%;
  margin: 44px auto 0 0;
}

.u-section-3 .u-list-1 {
  grid-template-rows: auto auto;
  width: 570px;
  margin: -525px 0 60px auto;
}

.u-section-3 .u-repeater-1 {
  grid-template-columns: repeat(2, calc(50% - 10px));
  min-height: 526px;
  grid-gap: 20px;
}

.u-section-3 .u-list-item-1 {
  background-image: none;
}

.u-section-3 .u-container-layout-1 {
  padding: 30px;
}

.u-section-3 .u-icon-1 {
  height: 71px;
  width: 71px;
  margin: 30px auto 0;
}

.u-section-3 .u-text-3 {
  background-image: none;
  text-transform: uppercase;
  font-size: 1.5rem;
  margin: 20px 0 0;
}

.u-section-3 .u-list-item-2 {
  background-image: none;
}

.u-section-3 .u-container-layout-2 {
  padding: 30px;
}

.u-section-3 .u-icon-2 {
  height: 71px;
  width: 71px;
  margin: 30px auto 0;
}

.u-section-3 .u-text-4 {
  background-image: none;
  text-transform: uppercase;
  font-size: 1.5rem;
  margin: 20px 0 0;
}

.u-section-3 .u-container-layout-3 {
  padding: 30px;
}

.u-section-3 .u-icon-3 {
  height: 71px;
  width: 71px;
  margin: 30px auto 0;
}

.u-section-3 .u-text-5 {
  background-image: none;
  text-transform: uppercase;
  font-size: 1.5rem;
  margin: 20px 0 0;
}

.u-section-3 .u-list-item-4 {
  background-image: none;
}

.u-section-3 .u-container-layout-4 {
  padding: 30px;
}

.u-section-3 .u-icon-4 {
  height: 71px;
  width: 71px;
  margin: 30px auto 0;
}

.u-section-3 .u-text-6 {
  background-image: none;
  text-transform: uppercase;
  font-size: 1.5rem;
  margin: 20px 0 0;
}

@media (max-width: 1199px) {
  .u-section-3 .u-sheet-1 {
    min-height: 825px;
  }

  .u-section-3 .u-text-2 {
    margin-left: 135px;
    margin-right: 135px;
  }

  .u-section-3 .u-image-1 {
    width: 450px;
    object-position: 41.45% 50%;
  }

  .u-section-3 .u-list-1 {
    height: auto;
    width: 470px;
  }

  .u-section-3 .u-text-3 {
    font-size: 1.25rem;
  }

  .u-section-3 .u-text-4 {
    font-size: 1.25rem;
  }

  .u-section-3 .u-text-5 {
    font-size: 1.25rem;
  }

  .u-section-3 .u-text-6 {
    font-size: 1.25rem;
  }
}
/* ... */

